--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -244,10 +244,11 @@ jobs:
             
             ```bash
             docker run -d \
-              --name snell \
-              -p 20000:20000 \
+              --name Snell \
+              --restart always \
+              --network host \
+              -e PORT=26615 \
               -e PSK="your_psk_here" \
-              --restart unless-stopped \
               ghcr.io/${{ github.repository_owner }}/snell:${{ steps.prep.outputs.version }}
             ```
             
