--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -36,7 +36,7 @@ RUN set -ex && \
         cp "${FILE_PATH}" /tmp/snell.zip; \
     else \
         echo "→ 官方下载: ${DOWNLOAD_URL}"; \
-        if wget -O /tmp/snell.zip "${DOWNLOAD_URL}"; then \
+        if wget --timeout=30 --tries=3 -O /tmp/snell.zip "${DOWNLOAD_URL}"; then \
             echo "✓ 下载成功"; \
         else \
             echo "⚠ 下载失败，尝试使用仓库文件"; \
