--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -3,22 +3,13 @@ FROM alpine:${ALPINE_VERSION} AS builder
 
 ARG TARGETARCH
 ARG SNELL_VERSION
-ARG USE_LOCAL=false
 
-# 安装必要工具
-RUN if [ "${USE_LOCAL}" != "true" ]; then \
-        apk add --no-cache ca-certificates wget unzip; \
-    else \
-        apk add --no-cache unzip; \
-    fi
+RUN apk add --no-cache ca-certificates wget unzip
 
-# 创建工作目录
 RUN mkdir -p /tmp/snell
 
-# 复制 Version 目录（如果存在）
 COPY Version /tmp/Version
 
-# 映射架构并下载或使用仓库中的 snell-server
 RUN set -ex && \
     case "${TARGETARCH}" in \
         amd64) ARCH="amd64" ;; \
@@ -28,59 +19,46 @@ RUN set -ex && \
         *) echo "❌ Unsupported architecture: ${TARGETARCH}" && exit 1 ;; \
     esac && \
     VERSION_NUM="${SNELL_VERSION#v}" && \
-    echo "→ Version: ${VERSION_NUM}, Arch: ${ARCH}" && \
-    DOWNLOAD_URL="https://dl.nssurge.com/snell/snell-server-v${VERSION_NUM}-linux-${ARCH}.zip" && \
     FILE_PATH="/tmp/Version/${VERSION_NUM}/snell-server-v${VERSION_NUM}-linux-${ARCH}.zip" && \
-    echo "→ 检查仓库文件: ${FILE_PATH}" && \
-    ls -la /tmp/Version/ || true && \
-    ls -la /tmp/Version/${VERSION_NUM}/ || true && \
-    if [ "${USE_LOCAL}" = "true" ] && [ -f "${FILE_PATH}" ]; then \
-        echo "→ 使用仓库文件: ${FILE_PATH}"; \
-        cp "${FILE_PATH}" /tmp/snell.zip; \
-    else \
-        echo "→ 官方下载: ${DOWNLOAD_URL}"; \
-        if wget --timeout=30 --tries=3 -O /tmp/snell.zip "${DOWNLOAD_URL}" 2>&1; then \
+    DOWNLOAD_URL="https://dl.nssurge.com/snell/snell-server-v${VERSION_NUM}-linux-${ARCH}.zip" && \
+    echo "→ 下载 Snell: ${DOWNLOAD_URL}" && \
+    i=1 && \
+    while [ $i -le 5 ]; do \
+        if wget --timeout=30 -O /tmp/snell.zip "${DOWNLOAD_URL}"; then \
             echo "✓ 下载成功"; \
+            break; \
+        fi; \
+        echo "⚠ 下载失败，第 $i 次重试，3 秒后重试"; \
+        i=$((i+1)); \
+        sleep 3; \
+    done && \
+    if [ ! -f /tmp/snell.zip ]; then \
+        echo "✗ 官方下载失败，尝试使用仓库文件"; \
+        if [ -f "${FILE_PATH}" ]; then \
+            cp "${FILE_PATH}" /tmp/snell.zip; \
+            echo "✓ 使用仓库文件"; \
         else \
-            echo "⚠ 下载失败，尝试使用仓库文件"; \
-            if [ -f "${FILE_PATH}" ]; then \
-                echo "✓ 使用仓库文件: ${FILE_PATH}"; \
-                cp "${FILE_PATH}" /tmp/snell.zip; \
-            else \
-                echo "✗ 构建失败：无法下载且仓库中无文件"; \
-                echo "✗ 请在 Version/${VERSION_NUM}/ 目录下添加 snell 文件或确保网络可访问"; \
-                exit 1; \
-            fi; \
+            echo "✗ 仓库中也不存在文件，构建失败"; \
+            exit 1; \
         fi; \
     fi && \
     unzip /tmp/snell.zip -d /tmp/snell && \
-    chmod +x /tmp/snell/snell-server && \
-    echo "✓ Snell Server 准备完成"
+    chmod +x /tmp/snell/snell-server
 
-# 最终运行镜像
 FROM alpine:${ALPINE_VERSION}
 
 ARG SNELL_VERSION
-LABEL org.opencontainers.image.source="https://github.com/yourusername/snell-docker"
-LABEL org.opencontainers.image.description="Snell Server (Alpine)"
 LABEL org.opencontainers.image.version="${SNELL_VERSION}"
 
-# 安装运行时依赖（Alpine 需要 libstdc++）
 RUN apk add --no-cache ca-certificates libstdc++ bash openssl
 
-# 创建工作目录
 RUN mkdir -p /snell
 
-# 从构建阶段复制文件
 COPY --from=builder /tmp/snell/snell-server /snell/snell-server
 COPY entrypoint.sh /snell/entrypoint.sh
 
-# 设置执行权限
-RUN chmod +x /snell/entrypoint.sh /snell/snell-server
+RUN chmod +x /snell/*
 
 WORKDIR /snell
-
 EXPOSE 20000
-
-# 使用 root 用户运行（egress-interface 需要 root 权限）
 ENTRYPOINT ["/snell/entrypoint.sh"]
