--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,6 @@ name: Build and Push Snell Docker Image
 
 on:
   schedule:
-    # 每小时执行一次（UTC 时间，对应北京时间每小时整点）
     - cron: '0 * * * *'
   workflow_dispatch:
     inputs:
@@ -11,29 +10,17 @@ on:
         required: false
         type: string
       debian:
-        description: 'Debian版本（如：bookworm, bullseye, trixie）'
         required: false
         default: 'bookworm'
         type: string
       alpine:
-        description: 'Alpine版本（如：latest, edge, 3.19, 3.18）'
         required: false
         default: 'latest'
         type: string
-      use_repo_files:
-        description: '使用仓库中的 Version 目录文件（如果存在）'
-        required: false
-        type: boolean
-        default: false
       force:
-        description: '强制构建（即使版本已存在）'
         required: false
         type: boolean
         default: false
-
-env:
-  DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
-  GHCR_USERNAME: ${{ github.repository_owner }}
 
 jobs:
   check-version:
@@ -42,76 +29,29 @@ jobs:
       version: ${{ steps.get_version.outputs.version }}
       should_build: ${{ steps.check_build.outputs.should_build }}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: 获取 Snell 版本
-        id: get_version
+      - id: get_version
         run: |
           if [ -n "${{ inputs.version }}" ]; then
             VERSION="${{ inputs.version }}"
-            echo "✓ 使用指定版本: $VERSION"
           else
-            echo "→ 检测最新版本..."
-            # 从 Release Notes 页面提取版本号
-            VERSION=$(curl -sL https://kb.nssurge.com/surge-knowledge-base/zh/release-notes/snell | \
+            VERSION=$(curl -sL https://dl.nssurge.com/snell/ | \
               grep -oP 'snell-server-v\K[0-9]+\.[0-9]+\.[0-9]+' | \
               sort -Vru | head -n 1)
-            
-            if [ -z "$VERSION" ]; then
-              VERSION=$(curl -sL https://dl.nssurge.com/snell/ 2>/dev/null | \
-                grep -oP 'snell-server-v\K[0-9]+\.[0-9]+\.[0-9]+' | \
-                sort -Vru | head -n 1)
-            fi
-            
-            if [ -z "$VERSION" ]; then
-              echo "✗ 无法获取版本号"
-              exit 1
-            fi
-            echo "✓ 检测到最新版本: $VERSION"
           fi
-          
-          # 添加 v 前缀
           echo "version=v${VERSION#v}" >> $GITHUB_OUTPUT
 
-      - name: 检查仓库中是否有该版本的文件
-        id: check_repo_files
+      - id: check_build
         run: |
           VERSION="${{ steps.get_version.outputs.version }}"
-          USE_REPO="${{ inputs.use_repo_files }}"
-          
-          if [ "$USE_REPO" = "true" ] || [ -z "$USE_REPO" ]; then
-            # 检查是否有至少一个平台的文件
-            if ls Version/${VERSION}/snell-server-v${VERSION}-linux-*.zip 1> /dev/null 2>&1; then
-              echo "✓ 仓库中存在版本 ${VERSION} 的文件"
-              echo "has_files=true" >> $GITHUB_OUTPUT
-            else
-              echo "→ 仓库中不存在版本 ${VERSION} 的文件"
-              echo "has_files=false" >> $GITHUB_OUTPUT
-            fi
-          else
-            echo "→ 不使用仓库文件"
-            echo "has_files=false" >> $GITHUB_OUTPUT
-          fi
-
-      - name: 检查是否需要构建
-        id: check_build
-        run: |
-          VERSION="${{ steps.get_version.outputs.version }}"
-          FORCE="${{ inputs.force }}"
-          
-          if [ "$FORCE" = "true" ]; then
-            echo "✓ 强制构建模式"
+          if [ "${{ inputs.force }}" = "true" ]; then
             echo "should_build=true" >> $GITHUB_OUTPUT
             exit 0
           fi
-          
-          # 检查 GHCR 是否已存在该版本
           if docker manifest inspect ghcr.io/${{ github.repository_owner }}/snell:${VERSION} >/dev/null 2>&1; then
-            echo "→ 版本 ${VERSION} 已存在于 GHCR"
             echo "should_build=false" >> $GITHUB_OUTPUT
           else
-            echo "✓ 版本 ${VERSION} 需要构建"
             echo "should_build=true" >> $GITHUB_OUTPUT
           fi
 
@@ -119,103 +59,20 @@ jobs:
     needs: check-version
     if: needs.check-version.outputs.should_build == 'true'
     runs-on: ubuntu-latest
-    timeout-minutes: 60
     strategy:
       matrix:
         base: [debian, alpine]
-      fail-fast: false
     steps:
-      - name: Checkout 代码
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+      - uses: actions/checkout@v4
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
+      - uses: docker/setup-qemu-action@v3
+      - uses: docker/setup-buildx-action@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Log in to Docker Hub
-        if: env.DOCKER_HUB_USERNAME != ''
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_TOKEN }}
-
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
+      - uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: 准备构建参数
-        id: prep
-        run: |
-          VERSION="${{ needs.check-version.outputs.version }}"
-          DEBIAN="${{ inputs.debian || 'bookworm' }}"
-          ALPINE="${{ inputs.alpine || 'latest' }}"
-          USE_REPO="${{ inputs.use_repo_files }}"
-          BASE="${{ matrix.base }}"
-          
-          # 检查是否使用仓库文件
-          if [ "$USE_REPO" = "true" ]; then
-            VERSION_NUM="${VERSION#v}"
-            if ls Version/${VERSION_NUM}/snell-server-v${VERSION_NUM}-linux-*.zip 1> /dev/null 2>&1; then
-              USE_LOCAL="true"
-              echo "✓ 将使用仓库中的文件"
-            else
-              USE_LOCAL="false"
-              echo "→ 仓库中无文件，将从官方下载"
-            fi
-          else
-            USE_LOCAL="false"
-            echo "→ 将从官方下载"
-          fi
-          
-          echo "version=$VERSION" >> $GITHUB_OUTPUT
-          echo "debian=$DEBIAN" >> $GITHUB_OUTPUT
-          echo "alpine=$ALPINE" >> $GITHUB_OUTPUT
-          echo "use_local=$USE_LOCAL" >> $GITHUB_OUTPUT
-          echo "base=$BASE" >> $GITHUB_OUTPUT
-          
-          # 构建镜像标签
-          GHCR_IMAGE="ghcr.io/${{ github.repository_owner }}/snell"
-          
-          if [ "$BASE" = "debian" ]; then
-            # Debian: version 和 latest
-            TAGS="${GHCR_IMAGE}:${VERSION},${GHCR_IMAGE}:latest"
-          else
-            # Alpine: version-alpine 和 alpine
-            TAGS="${GHCR_IMAGE}:${VERSION}-alpine,${GHCR_IMAGE}:alpine"
-          fi
-          
-          # 如果配置了 Docker Hub
-          if [ -n "${{ secrets.DOCKER_HUB_USERNAME }}" ]; then
-            DOCKER_HUB_IMAGE="${{ secrets.DOCKER_HUB_USERNAME }}/snell"
-            if [ "$BASE" = "debian" ]; then
-              TAGS="${TAGS},${DOCKER_HUB_IMAGE}:${VERSION},${DOCKER_HUB_IMAGE}:latest"
-            else
-              TAGS="${TAGS},${DOCKER_HUB_IMAGE}:${VERSION}-alpine,${DOCKER_HUB_IMAGE}:alpine"
-            fi
-          fi
-          
-          echo "tags=$TAGS" >> $GITHUB_OUTPUT
-          
-          echo ""
-          echo "📦 构建信息:"
-          echo "  基础镜像: $BASE"
-          echo "  版本: $VERSION"
-          echo "  Debian: $DEBIAN"
-          echo "  Alpine: $ALPINE"
-          echo "  使用仓库文件: $USE_LOCAL"
-          echo "  标签: $TAGS"
-
-      - name: 创建空 Version 目录（如果不存在）
-        run: |
-          mkdir -p Version
-          touch Version/.gitkeep
 
       - name: Build and push
         uses: docker/build-push-action@v5
@@ -224,24 +81,9 @@ jobs:
           file: ${{ matrix.base == 'alpine' && 'Dockerfile.alpine' || 'Dockerfile' }}
           platforms: linux/amd64,linux/386,linux/arm64,linux/arm/v7
           push: true
-          tags: ${{ steps.prep.outputs.tags }}
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/snell:${{ needs.check-version.outputs.version }}${{ matrix.base == 'alpine' && '-alpine' || '' }}
           build-args: |
-            SNELL_VERSION=${{ steps.prep.outputs.version }}
-            DEBIAN_VERSION=${{ steps.prep.outputs.debian }}
-            ALPINE_VERSION=${{ steps.prep.outputs.alpine }}
-            USE_LOCAL=${{ steps.prep.outputs.use_local }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-      - name: 构建摘要
-        run: |
-          echo "### ✅ 构建完成 (${{ matrix.base }})" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**版本:** ${{ steps.prep.outputs.version }}" >> $GITHUB_STEP_SUMMARY
-          echo "**基础镜像:** ${{ matrix.base }}" >> $GITHUB_STEP_SUMMARY
-          echo "**构建方式:** ${{ steps.prep.outputs.use_local == 'true' && '使用仓库文件' || '官方下载' }}" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**镜像标签:**" >> $GITHUB_STEP_SUMMARY
-          echo '```' >> $GITHUB_STEP_SUMMARY
-          echo "${{ steps.prep.outputs.tags }}" | tr ',' '\n' >> $GITHUB_STEP_SUMMARY
-          echo '```' >> $GITHUB_STEP_SUMMARY
+            SNELL_VERSION=${{ needs.check-version.outputs.version }}
+            DEBIAN_VERSION=${{ inputs.debian }}
+            ALPINE_VERSION=${{ inputs.alpine }}
