--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -22,17 +22,19 @@ RUN set -ex && \
     FILE_PATH="/tmp/Version/${VERSION_NUM}/snell-server-v${VERSION_NUM}-linux-${ARCH}.zip" && \
     DOWNLOAD_URL="https://dl.nssurge.com/snell/snell-server-v${VERSION_NUM}-linux-${ARCH}.zip" && \
     echo "→ 下载 Snell: ${DOWNLOAD_URL}" && \
+    rm -f /tmp/snell.zip && \
     i=1 && \
     while [ $i -le 5 ]; do \
         if wget --timeout=30 -O /tmp/snell.zip "${DOWNLOAD_URL}"; then \
             echo "✓ 下载成功"; \
             break; \
         fi; \
+        rm -f /tmp/snell.zip; \
         echo "⚠ 下载失败，第 $i 次重试，3 秒后重试"; \
         i=$((i+1)); \
         sleep 3; \
     done && \
-    if [ ! -f /tmp/snell.zip ]; then \
+    if [ ! -s /tmp/snell.zip ]; then \
         echo "✗ 官方下载失败，尝试使用仓库文件"; \
         if [ -f "${FILE_PATH}" ]; then \
             cp "${FILE_PATH}" /tmp/snell.zip; \
@@ -44,21 +46,3 @@ RUN set -ex && \
     fi && \
     unzip /tmp/snell.zip -d /tmp/snell && \
     chmod +x /tmp/snell/snell-server
-
-FROM alpine:${ALPINE_VERSION}
-
-ARG SNELL_VERSION
-LABEL org.opencontainers.image.version="${SNELL_VERSION}"
-
-RUN apk add --no-cache ca-certificates libstdc++ bash openssl
-
-RUN mkdir -p /snell
-
-COPY --from=builder /tmp/snell/snell-server /snell/snell-server
-COPY entrypoint.sh /snell/entrypoint.sh
-
-RUN chmod +x /snell/*
-
-WORKDIR /snell
-EXPOSE 20000
-ENTRYPOINT ["/snell/entrypoint.sh"]
