--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ on:
 
 env:
   IMAGE_NAME: snell
-  REGISTRY: ghcr.io
+  GHCR_REGISTRY: ghcr.io
   PLATFORMS: linux/amd64,linux/386,linux/arm64,linux/arm/v7
 
 jobs:
@@ -21,13 +21,12 @@ jobs:
       should_build: ${{ steps.version.outputs.should_build }}
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Install tools
         run: |
           sudo apt-get update
-          sudo apt-get install -y curl jq
+          sudo apt-get install -y curl gh
 
       - name: Detect Snell version
         id: version
@@ -38,16 +37,14 @@ jobs:
           set -e
 
           get_latest_snell_version() {
-            curl -fsSL \
-              https://kb.nssurge.com/surge-knowledge-base/zh/release-notes/snell \
+            curl -fsSL https://kb.nssurge.com/surge-knowledge-base/zh/release-notes/snell \
             | grep -oE 'v[0-9]+\.[0-9]+\.[0-9]+' \
             | sort -V \
             | tail -n1
           }
 
           get_ghcr_latest_version() {
-            gh api \
-              /users/${{ github.repository_owner }}/packages/container/${IMAGE_NAME}/versions \
+            gh api /users/${{ github.repository_owner }}/packages/container/${IMAGE_NAME}/versions \
               --jq '.[].metadata.container.tags[]' 2>/dev/null \
             | grep -oE '^v[0-9]+\.[0-9]+\.[0-9]+$' \
             | sort -V \
@@ -55,27 +52,18 @@ jobs:
           }
 
           if [ -z "$INPUT_VERSION" ]; then
-            echo "ℹ SNELL_VERSION 为空，获取官网最新正式版"
             SNELL_VERSION="$(get_latest_snell_version)"
           else
             SNELL_VERSION="v${INPUT_VERSION#v}"
           fi
 
-          if [ -z "$SNELL_VERSION" ]; then
-            echo "❌ 无法获取 Snell 版本"
-            exit 1
-          fi
+          [ -z "$SNELL_VERSION" ] && exit 1
 
           GHCR_VERSION="$(get_ghcr_latest_version)"
 
-          echo "官网版本: $SNELL_VERSION"
-          echo "GHCR 版本: ${GHCR_VERSION:-<none>}"
-
           if [ "$SNELL_VERSION" = "$GHCR_VERSION" ]; then
-            echo "✓ Snell 未更新，取消构建"
             echo "should_build=false" >> $GITHUB_OUTPUT
           else
-            echo "🚀 Snell 有新版本，开始构建"
             echo "should_build=true" >> $GITHUB_OUTPUT
           fi
 
@@ -92,15 +80,12 @@ jobs:
         base: [debian, alpine]
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
+      - uses: docker/setup-qemu-action@v3
+      - uses: docker/setup-buildx-action@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
+      # ---------- 登录 GHCR（必须） ----------
       - name: Login to GHCR
         uses: docker/login-action@v3
         with:
@@ -108,6 +93,50 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      # ---------- 判断 Docker Hub 是否可用 ----------
+      - name: Detect Docker Hub
+        id: hub
+        run: |
+          if [ -n "${{ secrets.DOCKER_HUB_USERNAME }}" ] && [ -n "${{ secrets.DOCKER_HUB_TOKEN }}" ]; then
+            echo "enabled=true" >> $GITHUB_OUTPUT
+          else
+            echo "enabled=false" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Login to Docker Hub
+        if: steps.hub.outputs.enabled == 'true'
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+
+      # ---------- 生成 tags ----------
+      - name: Prepare tags
+        id: tags
+        run: |
+          VERSION="${{ needs.version-check.outputs.snell_version }}"
+          BASE="${{ matrix.base }}"
+
+          TAGS=""
+
+          if [ "$BASE" = "debian" ]; then
+            TAGS="ghcr.io/${{ github.repository_owner }}/snell:${VERSION},ghcr.io/${{ github.repository_owner }}/snell:latest"
+          else
+            TAGS="ghcr.io/${{ github.repository_owner }}/snell:${VERSION}-alpine,ghcr.io/${{ github.repository_owner }}/snell:alpine"
+          fi
+
+          if [ "${{ steps.hub.outputs.enabled }}" = "true" ]; then
+            HUB="${{ secrets.DOCKER_HUB_USERNAME }}/snell"
+            if [ "$BASE" = "debian" ]; then
+              TAGS="$TAGS,$HUB:${VERSION},$HUB:latest"
+            else
+              TAGS="$TAGS,$HUB:${VERSION}-alpine,$HUB:alpine"
+            fi
+          fi
+
+          echo "tags=$TAGS" >> $GITHUB_OUTPUT
+
+      # ---------- 构建并推送 ----------
       - name: Build and Push (${{ matrix.base }})
         uses: docker/build-push-action@v5
         with:
@@ -117,6 +146,4 @@ jobs:
           platforms: ${{ env.PLATFORMS }}
           build-args: |
             SNELL_VERSION=${{ needs.version-check.outputs.snell_version }}
-          tags: |
-            ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ needs.version-check.outputs.snell_version }}-${{ matrix.base }}
-            ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:latest-${{ matrix.base }}
+          tags: ${{ steps.tags.outputs.tags }}
