--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,47 +1,44 @@
-name: Build and Push Snell
+name: Build Snell
 
 on:
   workflow_dispatch:
     inputs:
       snell_version:
-        description: "Snell 版本号（如 5.0.1，留空自动获取官网最新正式版）"
+        description: "Snell 版本号（如 5.0.1，留空自动获取最新正式版）"
         required: false
-        default: ""
       debian_version:
-        description: "Debian 主版本号（11 / 12 / 13，默认 12）"
+        description: "Debian 版本号（11 / 12 / 13，留空默认 12）"
         required: false
-        default: ""
+        default: "12"
       alpine_version:
-        description: "Alpine 版本（默认 latest）"
+        description: "Alpine 版本号（如 3.19，留空使用 latest）"
         required: false
-        default: ""
 
 env:
   IMAGE_NAME: snell
   PLATFORMS: linux/amd64,linux/386,linux/arm64,linux/arm/v7
 
 jobs:
-  version-check:
+  prepare:
     runs-on: ubuntu-latest
     outputs:
-      snell_version: ${{ steps.ver.outputs.snell_version }}
-      should_build: ${{ steps.ver.outputs.should_build }}
-
+      snell_version: ${{ steps.detect.outputs.snell_version }}
+      should_build: ${{ steps.detect.outputs.should_build }}
     steps:
-      - uses: actions/checkout@v4
-
       - name: Detect Snell version
-        id: ver
+        id: detect
+        shell: bash
         env:
           INPUT_VERSION: ${{ github.event.inputs.snell_version }}
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           set -e
 
           get_latest_official() {
             curl -fsSL https://kb.nssurge.com/surge-knowledge-base/zh/release-notes/snell \
               | grep -oE 'v[0-9]+\.[0-9]+\.[0-9]+' \
+              | grep -vE '(b|rc)' \
               | sort -V \
+              | uniq \
               | tail -n1
           }
 
@@ -52,24 +49,27 @@ jobs:
           fi
 
           if [ -z "$SNELL_VERSION" ]; then
-            echo "✗ 无法获取 Snell 版本"
+            echo "✗ 无法获取 Snell 官方版本号"
             exit 1
           fi
 
+          echo "→ Snell version: $SNELL_VERSION"
+
           if docker manifest inspect ghcr.io/${{ github.repository_owner }}/snell:${SNELL_VERSION} >/dev/null 2>&1; then
             echo "should_build=false" >> $GITHUB_OUTPUT
+            echo "✓ GHCR 已存在该版本，跳过构建"
           else
             echo "should_build=true" >> $GITHUB_OUTPUT
           fi
 
           echo "snell_version=$SNELL_VERSION" >> $GITHUB_OUTPUT
 
-  build-and-push:
-    needs: version-check
-    if: needs.version-check.outputs.should_build == 'true'
+  build:
+    needs: prepare
+    if: needs.prepare.outputs.should_build == 'true'
     runs-on: ubuntu-latest
-
     strategy:
+      fail-fast: false
       matrix:
         base: [debian, alpine]
 
@@ -77,13 +77,14 @@ jobs:
       - uses: actions/checkout@v4
 
       - uses: docker/setup-qemu-action@v3
+
       - uses: docker/setup-buildx-action@v3
 
       - name: Login GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
+          username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Login Docker Hub
@@ -92,45 +93,19 @@ jobs:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
-      - name: Resolve base versions
-        id: basever
-        run: |
-          DEBIAN="${{ github.event.inputs.debian_version }}"
-          ALPINE="${{ github.event.inputs.alpine_version }}"
-
-          [ -z "$DEBIAN" ] && DEBIAN="12"
-          [ -z "$ALPINE" ] && ALPINE="latest"
-
-          echo "debian=${DEBIAN}-slim" >> $GITHUB_OUTPUT
-          echo "alpine=$ALPINE" >> $GITHUB_OUTPUT
-
-      - name: Prepare tags
-        id: tags
-        run: |
-          V="${{ needs.version-check.outputs.snell_version }}"
-          BASE="${{ matrix.base }}"
-          OWNER="${{ github.repository_owner }}"
-          HUB="${{ secrets.DOCKER_HUB_USERNAME }}"
-
-          if [ "$BASE" = "debian" ]; then
-            TAGS="ghcr.io/$OWNER/snell:$V,ghcr.io/$OWNER/snell:latest"
-            TAGS="$TAGS,$HUB/snell:$V,$HUB/snell:latest"
-          else
-            TAGS="ghcr.io/$OWNER/snell:$V-alpine,ghcr.io/$OWNER/snell:alpine"
-            TAGS="$TAGS,$HUB/snell:$V-alpine,$HUB/snell:alpine"
-          fi
-
-          echo "tags=$TAGS" >> $GITHUB_OUTPUT
-
-      - name: Build and Push (${{ matrix.base }})
+      - name: Build & Push
         uses: docker/build-push-action@v5
         with:
           context: .
           file: Dockerfile.${{ matrix.base }}
-          platforms: ${{ env.PLATFORMS }}
           push: true
-          tags: ${{ steps.tags.outputs.tags }}
+          platforms: ${{ env.PLATFORMS }}
           build-args: |
-            SNELL_VERSION=${{ needs.version-check.outputs.snell_version }}
-            DEBIAN_VERSION=${{ steps.basever.outputs.debian }}
-            ALPINE_VERSION=${{ steps.basever.outputs.alpine }}
+            SNELL_VERSION=${{ needs.prepare.outputs.snell_version }}
+            DEBIAN_VERSION=${{ github.event.inputs.debian_version || '12' }}
+            ALPINE_VERSION=${{ github.event.inputs.alpine_version }}
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/snell:${{ needs.prepare.outputs.snell_version }}
+            ghcr.io/${{ github.repository_owner }}/snell:${{ needs.prepare.outputs.snell_version }}-${{ matrix.base }}
+            docker.io/${{ secrets.DOCKER_HUB_USERNAME }}/snell:${{ needs.prepare.outputs.snell_version }}
+            docker.io/${{ secrets.DOCKER_HUB_USERNAME }}/snell:${{ needs.prepare.outputs.snell_version }}-${{ matrix.base }}
