--- a/Dockerfile.debian
+++ b/Dockerfile.debian
@@ -1,16 +1,15 @@
-ARG DEBIAN_VERSION=12-slim
-FROM debian:${DEBIAN_VERSION} AS builder
+ARG DEBIAN_VERSION=12
+FROM debian:${DEBIAN_VERSION}-slim
 
 ARG TARGETARCH
 ARG SNELL_VERSION
 
 RUN apt-get update && \
-    apt-get install -y --no-install-recommends ca-certificates wget unzip && \
+    apt-get install -y --no-install-recommends \
+      ca-certificates wget unzip && \
     rm -rf /var/lib/apt/lists/*
 
-WORKDIR /tmp
-
-COPY Version /tmp/Version
+WORKDIR /opt/snell
 
 RUN set -ex && \
     case "$TARGETARCH" in \
@@ -18,31 +17,29 @@ RUN set -ex && \
       386) ARCH=i386 ;; \
       arm64) ARCH=aarch64 ;; \
       arm/v7) ARCH=armv7l ;; \
-      *) exit 1 ;; \
+      *) echo "Unsupported arch: $TARGETARCH" && exit 1 ;; \
     esac && \
     V="${SNELL_VERSION#v}" && \
     URL="https://dl.nssurge.com/snell/snell-server-v${V}-linux-${ARCH}.zip" && \
     FILE="/tmp/Version/v${V}/snell-server-v${V}-linux-${ARCH}.zip" && \
+    rm -f snell.zip && \
     i=1 && \
     while [ $i -le 5 ]; do \
-      wget -O snell.zip "$URL" && break || true; \
+      if wget -O snell.zip "$URL"; then break; fi; \
       rm -f snell.zip; \
       sleep 3; \
       i=$((i+1)); \
     done && \
-    [ -s snell.zip ] || cp "$FILE" snell.zip && \
-    unzip snell.zip && chmod +x snell-server
+    if [ ! -s snell.zip ]; then \
+      if [ -f "$FILE" ]; then \
+        cp "$FILE" snell.zip; \
+      else \
+        echo "Snell 下载失败"; \
+        exit 1; \
+      fi; \
+    fi && \
+    unzip snell.zip && \
+    chmod +x snell-server
 
-FROM debian:${DEBIAN_VERSION}
-
-RUN apt-get update && \
-    apt-get install -y --no-install-recommends ca-certificates && \
-    rm -rf /var/lib/apt/lists/*
-
-WORKDIR /snell
-COPY --from=builder /tmp/snell-server /snell/snell-server
-COPY entrypoint.sh /snell/entrypoint.sh
-RUN chmod +x /snell/*
-
-EXPOSE 20000
-ENTRYPOINT ["/snell/entrypoint.sh"]
+EXPOSE 8388
+ENTRYPOINT ["./snell-server"]
