--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,63 +1,85 @@
-name: Build Snell
+name: Build and Push Snell Docker Image
 
 on:
+  schedule:
+    - cron: '0 * * * *'
   workflow_dispatch:
     inputs:
-      snell_version:
-        description: "Snell 版本号（如 5.0.1，留空自动获取最新正式版）"
+      version:
+        description: 'Snell 版本号（如 5.0.1，留空自动检测最新正式版）'
         required: false
-      debian_version:
-        description: "Debian 版本号（11 / 12 / 13，留空默认 12）"
+        type: string
+      debian:
+        description: 'Debian 版本号（11 / 12 / 13，默认 12）'
         required: false
-        default: "12"
-      alpine_version:
-        description: "Alpine 版本号（如 3.19，留空使用 latest）"
+        default: '12'
+        type: string
+      alpine:
+        description: 'Alpine 版本（如 3.19 / latest，默认 latest）'
         required: false
+        default: 'latest'
+        type: string
 
 env:
   IMAGE_NAME: snell
   PLATFORMS: linux/amd64,linux/386,linux/arm64,linux/arm/v7
 
 jobs:
-  prepare:
+  check-version:
     runs-on: ubuntu-latest
     outputs:
       snell_version: ${{ steps.detect.outputs.snell_version }}
       should_build: ${{ steps.detect.outputs.should_build }}
     steps:
-      - name: Detect Snell version
+      - uses: actions/checkout@v4
+
+      - name: Detect Snell Version
         id: detect
         shell: bash
         env:
-          INPUT_VERSION: ${{ github.event.inputs.snell_version }}
+          INPUT_VERSION: ${{ inputs.version }}
         run: |
-          set -e
+          set -euo pipefail
 
-          get_latest_official() {
+          get_versions() {
             curl -fsSL https://kb.nssurge.com/surge-knowledge-base/zh/release-notes/snell \
-              | grep -oE 'v[0-9]+\.[0-9]+\.[0-9]+' \
-              | grep -vE '(b|rc)' \
-              | sort -V \
-              | uniq \
-              | tail -n1
+              | grep -oE 'v[0-9]+\.[0-9]+\.[0-9]+([a-z0-9]+)?' \
+              | sort -V | uniq
           }
 
-          if [ -z "$INPUT_VERSION" ]; then
-            SNELL_VERSION="$(get_latest_official)"
+          is_prerelease() {
+            [[ "$1" =~ (alpha|beta|rc|b) ]]
+          }
+
+          check_download() {
+            local v="${1#v}"
+            local url="https://dl.nssurge.com/snell/snell-server-v${v}-linux-amd64.zip"
+            curl -sI --max-time 10 "$url" | head -n1 | grep -q "200"
+          }
+
+          get_latest() {
+            for v in $(get_versions | sort -Vr); do
+              is_prerelease "$v" && continue
+              check_download "$v" && echo "$v" && return 0
+            done
+            return 1
+          }
+
+          if [ -z "${INPUT_VERSION:-}" ]; then
+            SNELL_VERSION="$(get_latest)"
           else
             SNELL_VERSION="v${INPUT_VERSION#v}"
           fi
 
           if [ -z "$SNELL_VERSION" ]; then
-            echo "✗ 无法获取 Snell 官方版本号"
+            echo "✗ 无法获取可用的 Snell 正式版"
             exit 1
           fi
 
           echo "→ Snell version: $SNELL_VERSION"
 
-          if docker manifest inspect ghcr.io/${{ github.repository_owner }}/snell:${SNELL_VERSION} >/dev/null 2>&1; then
+          if docker manifest inspect ghcr.io/${GITHUB_REPOSITORY_OWNER}/snell:${SNELL_VERSION} >/dev/null 2>&1; then
             echo "should_build=false" >> $GITHUB_OUTPUT
-            echo "✓ GHCR 已存在该版本，跳过构建"
           else
             echo "should_build=true" >> $GITHUB_OUTPUT
           fi
@@ -65,47 +87,47 @@ jobs:
           echo "snell_version=$SNELL_VERSION" >> $GITHUB_OUTPUT
 
   build:
-    needs: prepare
-    if: needs.prepare.outputs.should_build == 'true'
+    needs: check-version
+    if: needs.check-version.outputs.should_build == 'true'
     runs-on: ubuntu-latest
     strategy:
-      fail-fast: false
       matrix:
         base: [debian, alpine]
+      fail-fast: false
 
     steps:
       - uses: actions/checkout@v4
 
       - uses: docker/setup-qemu-action@v3
-
       - uses: docker/setup-buildx-action@v3
 
       - name: Login GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
+          username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Login Docker Hub
+        if: secrets.DOCKER_HUB_USERNAME != ''
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
-      - name: Build & Push
+      - name: Build and Push
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: Dockerfile.${{ matrix.base }}
-          push: true
+          file: ${{ matrix.base == 'alpine' && 'Dockerfile.alpine' || 'Dockerfile' }}
           platforms: ${{ env.PLATFORMS }}
-          build-args: |
-            SNELL_VERSION=${{ needs.prepare.outputs.snell_version }}
-            DEBIAN_VERSION=${{ github.event.inputs.debian_version || '12' }}
-            ALPINE_VERSION=${{ github.event.inputs.alpine_version }}
+          push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/snell:${{ needs.prepare.outputs.snell_version }}
-            ghcr.io/${{ github.repository_owner }}/snell:${{ needs.prepare.outputs.snell_version }}-${{ matrix.base }}
-            docker.io/${{ secrets.DOCKER_HUB_USERNAME }}/snell:${{ needs.prepare.outputs.snell_version }}
-            docker.io/${{ secrets.DOCKER_HUB_USERNAME }}/snell:${{ needs.prepare.outputs.snell_version }}-${{ matrix.base }}
+            ghcr.io/${{ github.repository_owner }}/snell:${{ needs.check-version.outputs.snell_version }}${{ matrix.base == 'alpine' && '-alpine' || '' }}
+            ghcr.io/${{ github.repository_owner }}/snell:${{ matrix.base == 'alpine' && 'alpine' || 'latest' }}
+            ${{ secrets.DOCKER_HUB_USERNAME }}/snell:${{ needs.check-version.outputs.snell_version }}${{ matrix.base == 'alpine' && '-alpine' || '' }}
+            ${{ secrets.DOCKER_HUB_USERNAME }}/snell:${{ matrix.base == 'alpine' && 'alpine' || 'latest' }}
+          build-args: |
+            SNELL_VERSION=${{ needs.check-version.outputs.snell_version }}
+            DEBIAN_VERSION=${{ inputs.debian }}
+            ALPINE_VERSION=${{ inputs.alpine }}
